--- a/Mashibing_MCA_Elasticsearch/pom.xml
+++ b/Mashibing_MCA_Elasticsearch/pom.xml
@@ -40,6 +40,11 @@
             <version>7.17.9</version>
         </dependency>
         <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+            <version>7.17.9</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.8</version>
