--- a/Mashibing_MCA_Elasticsearch/pom.xml
+++ b/Mashibing_MCA_Elasticsearch/pom.xml
@@ -49,5 +49,10 @@
             <artifactId>lombok</artifactId>
             <version>1.18.8</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>2.0.9</version>
+        </dependency>
     </dependencies>
 </project>
