--- a/Mashibing_MCA_Elasticsearch/pom.xml
+++ b/Mashibing_MCA_Elasticsearch/pom.xml
@@ -50,6 +50,10 @@
             <version>7.17.9</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.8</version>
