--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
   <modules>
     <module>Mashibing_MCA_Elasticsearch</module>
       <module>Mashibing_MCA_Data_Structures_And_Algorithms</module>
+      <module>Mashibing_MCA_RocketMQ</module>
   </modules>
   <packaging>pom</packaging>
 
