--- a/Mashibing_MCA_Data_Structures_And_Algorithms/pom.xml
+++ b/Mashibing_MCA_Data_Structures_And_Algorithms/pom.xml
@@ -13,6 +13,14 @@
     <name>Mashibing_MCA_Data_Structures_And_Algorithms</name>
     <url>http://maven.apache.org</url>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.15</version>
+        </dependency>
+    </dependencies>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
